--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -24,6 +24,7 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "\n",
+    "import plotly\n",
     "import plotly.graph_objects as go\n",
     "\n",
     "plt.style.use(hep.style.ROOT)  # For now ROOT defaults to CMS\n",
@@ -175,18 +176,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "fig=plt.figure()\r\n",
-    "fig.show()\r\n",
-    "ax=fig.add_subplot(111)\r\n",
-    "\r\n",
-    "# ax.plot(counts_fixed[0:200]-counts[0:200],c=\"b\",label='diff_counts[0:200]')\r\n",
-    "ax.plot(counts_fixed-counts,c=\"b\",label='diff_counts')\r\n",
-    "ax.plot(a1-b1,c=\"g\",label='diff_+phi_-phi')\r\n",
-    "ax.plot(a2-b2,c=\"y\",label='diff_+ctheta_-ctheta')\r\n",
-    "# ax.plot(avgcos[0:200]-counts[0:200],c=\"r\",label='diff_+avgcos_-counts[0:200]')\r\n",
-    "# ax.plot(avgphi[0:200]-counts[0:200],c=\"m\",label='diff_+avgphi_-counts[0:200]')\r\n",
-    "# ax.set_yscale('log')\r\n",
-    "plt.legend(loc=\"best\")\r\n",
+    "fig=plt.figure()\n",
+    "fig.show()\n",
+    "ax=fig.add_subplot(111)\n",
+    "\n",
+    "# ax.plot(counts_fixed[0:200]-counts[0:200],c=\"b\",label='diff_counts[0:200]')\n",
+    "ax.plot(counts_fixed-counts,c=\"b\",label='diff_counts')\n",
+    "ax.plot(a1-b1,c=\"g\",label='diff_+phi_-phi')\n",
+    "ax.plot(a2-b2,c=\"y\",label='diff_+ctheta_-ctheta')\n",
+    "# ax.plot(avgcos[0:200]-counts[0:200],c=\"r\",label='diff_+avgcos_-counts[0:200]')\n",
+    "# ax.plot(avgphi[0:200]-counts[0:200],c=\"m\",label='diff_+avgphi_-counts[0:200]')\n",
+    "# ax.set_yscale('log')\n",
+    "plt.legend(loc=\"best\")\n",
     "print(np.min(phi_fixed),np.max(phi_fixed),np.min(ctheta_fixed),np.max(ctheta_fixed))"
    ]
   },
@@ -196,15 +197,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Mesh3d(x=x, y=y, z=z,\r\n",
-    "                      opacity=0.5,\r\n",
-    "                      color=\"rgba(244,22,100,06)\"\r\n",
-    "                 \r\n",
-    " )])\r\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs theory triangulated\",\r\n",
-    "                  width=500,\r\n",
-    "                  height=500,\r\n",
-    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "fig = go.Figure(data=[go.Mesh3d(x=x, y=y, z=z,\n",
+    "                      opacity=0.5,\n",
+    "                      color=\"rgba(244,22,100,06)\"\n",
+    "                 \n",
+    " )])\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs theory triangulated\",\n",
+    "                  width=500,\n",
+    "                  height=500,\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\n",
     "fig.show()"
    ]
   },
@@ -214,23 +215,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Go scatters do not provide a legend\r\n",
-    "fig = go.Figure(data=[go.Scatter3d(x=ctheta, y=phi, z=counts,\r\n",
-    "                    mode='markers',\r\n",
-    "                    # mode='lines',\r\n",
-    "                    marker=dict(\r\n",
-    "                    size=1.5,\r\n",
-    "                    colorscale='Viridis',   # choose a colorscale\r\n",
-    "                    opacity=0.85,\r\n",
-    "                    showscale=True          # to show the legend according to the color\r\n",
-    "                   )\r\n",
-    "                )])\r\n",
-    "\r\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs spherical coordinates\",\r\n",
-    "                  width=500,\r\n",
-    "                  height=500,\r\n",
-    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
-    "                #   margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "# Go scatters do not provide a legend\n",
+    "fig = go.Figure(data=[go.Scatter3d(x=ctheta, y=phi, z=counts,\n",
+    "                    mode='markers',\n",
+    "                    # mode='lines',\n",
+    "                    marker=dict(\n",
+    "                    size=1.5,\n",
+    "                    colorscale='Viridis',   # choose a colorscale\n",
+    "                    opacity=0.85,\n",
+    "                    showscale=True          # to show the legend according to the color\n",
+    "                   )\n",
+    "                )])\n",
+    "\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs spherical coordinates\",\n",
+    "                  width=500,\n",
+    "                  height=500,\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig.show()"
    ]
   },
@@ -240,23 +241,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Go scatters do not provide a legend\r\n",
-    "fig = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z,\r\n",
-    "                    mode='markers',\r\n",
-    "                    marker=dict(\r\n",
-    "                        size=5,\r\n",
-    "                        color=d,            # set color to an array/list of desired values\r\n",
-    "                        colorscale='Viridis',   # choose a colorscale\r\n",
-    "                        opacity=1.,\r\n",
-    "                        showscale=True          # to show the legend according to the color\r\n",
-    "                   )\r\n",
-    "                )])\r\n",
-    "\r\n",
-    "fig.update_layout(title=\"TFMeOx MFPADs theory scattered\",\r\n",
-    "                  width=500,\r\n",
-    "                  height=500,\r\n",
-    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
-    "                #   margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "# Go scatters do not provide a legend\n",
+    "fig = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z,\n",
+    "                    mode='markers',\n",
+    "                    marker=dict(\n",
+    "                        size=5,\n",
+    "                        color=d,            # set color to an array/list of desired values\n",
+    "                        colorscale='Viridis',   # choose a colorscale\n",
+    "                        opacity=1.,\n",
+    "                        showscale=True          # to show the legend according to the color\n",
+    "                   )\n",
+    "                )])\n",
+    "\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs theory scattered\",\n",
+    "                  width=500,\n",
+    "                  height=500,\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig.show()"
    ]
   },
@@ -273,12 +274,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
-    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
-    "                # width=500,\r\n",
-    "                # height=500,\r\n",
-    "                # margin=dict(l=65, r=50, b=65, t=90))\r\n",
-    "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, colorscale='Viridis', connectgaps=True)])\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory sur NO FIXf', autosize=False,\n",
+    "                # width=500,\n",
+    "                # height=500,\n",
+    "                # margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig.show()"
    ]
   },
@@ -295,10 +296,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fixing the stripe\r\n",
-    "Y[-1,0:100]=Y[0,0:100]\r\n",
-    "X[-1,0:100]=X[0,0:100]\r\n",
-    "Z[-1,0:100]=Z[0,0:100]"
+    "#fixing the stripe\n",
+    "Y[-1,0:100]=Y[0,0:100]\n",
+    "X[-1,0:100]=X[0,0:100]\n",
+    "Z[-1,0:100]=Z[0,0:100]\n",
+    "\n",
+    "%store X\n",
+    "%store Y\n",
+    "%store Z\n",
+    "%store d_matrix"
    ]
   },
   {
@@ -308,12 +314,12 @@
    "outputs": [],
    "source": [
     "#fixed stripe\n",
-    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
-    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
-    "                # width=500,\r\n",
-    "                # height=500,\r\n",
-    "                # margin=dict(l=65, r=50, b=65, t=90))\r\n",
-    "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\n",
+    "                # width=500,\n",
+    "                # height=500,\n",
+    "                # margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig.show()"
    ]
   },
@@ -323,12 +329,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
-    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
-    "                #   width=500, height=500,\r\n",
-    "                #   margin=dict(l=65, r=50, b=65, t=90))\r\n",
-    "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\n",
+    "                #   width=500, height=500,\n",
+    "                #   margin=dict(l=65, r=50, b=65, t=90))\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotly.__version__"
    ]
   },
   {
@@ -341,13 +356,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('base': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
-    }
-   },
-   "name": "Python 3.8.6 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
