--- a/diatomic_ENSCAN.ipynb
+++ b/diatomic_ENSCAN.ipynb
@@ -46,22 +46,31 @@
     "\n",
     "fileR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R_enant_scan25step_moire.root\")\n",
     "fileS = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S_enant_scan35step_moire.root\")\n",
+    "# fileR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R_enant_scan25step_moire_lim.root\")\n",
+    "# fileS = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S_enant_scan35step_moire_lim.root\")\n",
     "\n",
-    "PATH_CH = [\"angular_distr_el/CH11-2-3_m2x-m29/\",\"angular_distr_el/CH9-10_m1x-m42/\"]\n",
+    "PATH_CH = [\"CH11-2-3_m2x-m29/\",\"CH9-10_m1x-m42/\"]\n",
+    "PATH_CH_opt = 1\n",
+    "\n",
+    "#manual selection..\n",
+    "# PATH_name = str(PATH_CH[PATH_CH_opt]).split(\"_\")[0]+\"_lim\"\n",
+    "PATH_name = str(PATH_CH[PATH_CH_opt]).split(\"_\")[0]\n",
+    "    \n",
+    "\n",
     "DIR = [\"map_AVG_ph_En/\",\"map_ScanEn_SHORT/\",\"map_ScanEn_LONG/\"]\n",
-    "EN = [\"NO_gate\",\"700\",\"350\",\"20\"]\n",
-    "EN_opt = 2\n",
+    "EN = [\"NO_gate\",\"550\",\"250\",\"20\"]\n",
+    "EN_opt = 1\n",
     "# the next layer is L or R, selected later\n",
     "ID_AVG=[\"PECD_el(theta)\",\"PECD_el(theta)_redPHI\"]\n",
     "ID_SHORT=[\"cos(theta)_vs_pEn\",\"cos(theta)_vs_pEn_pol\",\"cos(theta)_vs_pEn_redPHI\",\"cos(theta)_vs_pEn_pol_redPHI\"]\n",
     "ID_PECD=[\"PECD_el(theta)_@533eV_MINUS\",\"PECD_el(theta)_@534eV_PLUS\",\"PECD_el(theta)_@533eV_MINUS_redPHI\",\"PECD_el(theta)_@534eV_PLUS_redPHI\"]\n",
     "\n",
     "#both ennatiomer (different en length)\n",
-    "loc_avg=PATH_CH[0]+DIR[0]+EN[EN_opt]+\"/\"\n",
+    "loc_avg=\"angular_distr_el/\"+PATH_CH[PATH_CH_opt]+DIR[0]+EN[EN_opt]+\"/\"\n",
     "#R enatiomer ph. en. 25 bins\n",
-    "loc_short=PATH_CH[0]+DIR[1]+EN[EN_opt]+\"/\"\n",
+    "loc_short=\"angular_distr_el/\"+PATH_CH[PATH_CH_opt]+DIR[1]+EN[EN_opt]+\"/\"\n",
     "#S enatiomer ph. en. 35 bins\n",
-    "loc_long=PATH_CH[0]+DIR[2]+EN[EN_opt]+\"/\""
+    "loc_long=\"angular_distr_el/\"+PATH_CH[PATH_CH_opt]+DIR[2]+EN[EN_opt]+\"/\""
    ]
   },
   {
@@ -285,7 +294,7 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "plt.suptitle(\"cos(tehta) R enat. vs ph. en. @ el. en. 25 steps \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(PATH_name+\" cos(tehta) R enat. vs ph. en. @ el. en. 25 steps \"+EN[EN_opt]+\" eV\")\n",
     "cs1=ax1.contourf(Ren[1:],ctheta,RcthetaEN_R_norm[1:].T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"CR pol.\")\n",
     "ax1.set_xlabel('photon en [eV]')\n",
@@ -305,7 +314,7 @@
     "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.set_ticks([RcthetaEN_L_norm[1:].min(),RcthetaEN_L_norm[1:].max()])\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_cos(theta)_R_CL-CR.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_cos(theta)_R_CR-CL.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -316,7 +325,7 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "plt.suptitle(\"cos(tehta) S enat. vs ph. en. @ el. en. 35 steps \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(PATH_name+\" cos(tehta) S enat. vs ph. en. @ el. en. 35 steps \"+EN[EN_opt]+\" eV\")\n",
     "cs1=ax1.contourf(Sen[1:],ctheta,ScthetaEN_R_norm[1:].T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"CR pol.\")\n",
     "ax1.set_xlabel('photon en [eV]')\n",
@@ -336,7 +345,7 @@
     "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.set_ticks([ScthetaEN_L_norm[1:].min(),ScthetaEN_L_norm[1:].max()])\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_cos(theta)_S_CL-CR.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_cos(theta)_S_CR-CL.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -348,7 +357,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(Ren[1:],ctheta,RcPECD_en.T, cmap=cmap_temp, levels=10)\n",
-    "ax.set_title(\"PECD CR-CL R enan. vs ph. en. @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD CR-CL \\n R enan. vs ph. en. @ \"+EN[EN_opt]+\" eV\")\n",
     "# aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('photon en [eV]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
@@ -357,7 +366,7 @@
     "# cbar.set_ticks([cPECD_en.min(),cPECD_en.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "# ax.set_aspect(aspect)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_PECDmap_R.png\", dpi=144, transparent=False)\n"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_PECDmap_R.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -368,7 +377,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(Sen[1:],ctheta,ScPECD_en[1:].T, cmap=cmap_temp, levels=10)\n",
-    "ax.set_title(\"PECD CR-CL S enan. vs ph. en. @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD CR-CL \\n S enan. vs ph. en. @ \"+EN[EN_opt]+\" eV\")\n",
     "# aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('photon en [eV]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
@@ -378,7 +387,7 @@
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "# ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_PECDmap_S.png\", dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_PECDmap_S.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -411,7 +420,7 @@
     "        param_matrix_R[i][counter]=((m.values[el], m.errors[el]))\n",
     "\n",
     "param_matrix_R=np.array(param_matrix_R) #numpy tranformation!!!\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_6slices_b1b2_R.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_6slices_b1b2_R.png\", dpi=144, transparent=False)\n",
     "\n",
     "# fugi.overlaygraph(fig,wspace=0.08, hspace=0.08)\n",
     "plt.show() "
@@ -424,7 +433,7 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "plt.suptitle(\"PECD 6 b1 and b2 R enant. vs ph. energy @ \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(PATH_name+\" PECD6 b1 and b2 R enant. vs ph. energy @ \"+EN[EN_opt]+\" eV\")\n",
     "ax1.scatter(Ren[1:],param_matrix_R[:,0,0])\n",
     "ax1.errorbar(Ren[1:],param_matrix_R[:,0,0], param_matrix_R[:,0,1], fmt=\"o\")\n",
     "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
@@ -441,7 +450,7 @@
     "ax2.set_ylabel('b2 [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_6_b1b2_R.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_6_b1b2_R.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -476,7 +485,7 @@
     "param_matrix_R=np.array(param_matrix_R) #numpy tranformation!!!\n",
     "\n",
     "# fugi.overlaygraph(fig,wspace=0.08, hspace=0.08)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_2slices_b1b2_R.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_2slices_b1b2_R.png\", dpi=144, transparent=False)\n",
     "plt.show() "
    ]
   },
@@ -487,7 +496,7 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "plt.suptitle(\"b1 and b2 R enant. vs ph. energy 25 steps @ \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(PATH_name+\" b1 and b2 R enant. vs ph. energy 25 steps @ \"+EN[EN_opt]+\" eV\")\n",
     "ax1.scatter(Ren[1:],param_matrix_R[:,0,0])\n",
     "ax1.errorbar(Ren[1:],param_matrix_R[:,0,0], param_matrix_R[:,0,1], fmt=\"o\")\n",
     "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
@@ -504,7 +513,7 @@
     "ax2.set_ylabel('b2 [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_b1b2_R.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_b1b2_R.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -545,7 +554,7 @@
     "# plt.show()\n",
     "\n",
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "plt.suptitle(\"b1 and b2 S enant. vs ph. energy 35 steps @ \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(PATH_name+\" b1 and b2 S enant. vs ph. energy 35 steps @ \"+EN[EN_opt]+\" eV\")\n",
     "ax1.scatter(Sen,param_matrix_S[:,0,0])\n",
     "ax1.errorbar(Sen,param_matrix_S[:,0,0], param_matrix_S[:,0,1], fmt=\"o\")\n",
     "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
@@ -562,7 +571,7 @@
     "ax2.set_ylabel('b2 [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_b1b2_S.png\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_b1b2_S.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -574,7 +583,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(cbeta,cthetaM,fugi.smoothgauss(RPECD_Auger_533.T,0.3,0.3), cmap=cmap_temp, levels=10)\n",
-    "ax.set_title(\"PECD map CR-CL R ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD map CR-CL \\n R ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "aspect=(cbeta.max()/cthetaM.max())\n",
     "ax.set_xlabel('cos(beta) [adm]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
@@ -582,7 +591,7 @@
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph533eV_\"+EN[EN_opt]+\"eV_norm_PECD_R.png\", dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph533eV_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_PECD_R.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -603,7 +612,7 @@
     "\n",
     "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
-    "ax.set_title(\"cos(theta)_CR R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" cos(theta)_CR \\n R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('counts')\n",
     "\n",
@@ -639,7 +648,7 @@
     "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
-    "ax.set_title(\"PECD CR-CL R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD CR-CL \\n R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('PECD %')\n",
     "\n",
@@ -653,7 +662,7 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph533eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R.png\", dpi=144, transparent=False)\n"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph533eV_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_1DPECD_R.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -664,7 +673,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(cbeta,cthetaM,fugi.smoothgauss(RPECD_Auger_534.T,0.3,0.3), cmap=cmap_temp, levels=10)\n",
-    "ax.set_title(\"PECD map CR-CL R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD map CR-CL \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "aspect=(cbeta.max()/cthetaM.max())\n",
     "ax.set_xlabel('cos(beta) [adm]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
@@ -672,7 +681,7 @@
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_PECD_R.png\", dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_PECD_R.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -694,7 +703,7 @@
     "\n",
     "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
-    "ax.set_title(\"cos(theta)_CR R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" cos(theta)_CR \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('normalised counts')\n",
     "\n",
@@ -730,7 +739,7 @@
     "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
-    "ax.set_title(\"PECD CR-CL R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD CR-CL \\n R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('PECD %')\n",
     "\n",
@@ -744,7 +753,7 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R.png\", dpi=144, transparent=False)\n"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_1DPECD_R.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -766,7 +775,7 @@
     "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
-    "ax.set_title(\"PECD R-S enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD R-S \\n ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('PECD %')\n",
     "\n",
@@ -780,7 +789,7 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R-S.png\", dpi=144, transparent=False)\n"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_1DPECD_R-S.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -802,7 +811,7 @@
     "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
-    "ax.set_title(\"PECD R-S enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(PATH_name+\" PECD R-S \\n ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('PECD %')\n",
     "\n",
@@ -816,7 +825,7 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R-S.png\", dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+PATH_name+\"_\"+EN[EN_opt]+\"eV_norm_1DPECD_R-S.png\", dpi=144, transparent=False)"
    ]
   },
   {
