--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -131,14 +131,14 @@
     "from sklearn.preprocessing import normalize\n",
     "\n",
     "nhistRCL = histRCL.to_numpy()\n",
-    "r_nhistRCL = np.array(nhistRCL[0]) # z values normalise to 1\n",
-    "r_norm_nhistRCL = fugi.normalise_matrix(nhistRCL[0]) # z values normalise to 1\n",
+    "r_nhistRCL = np.array(nhistRCL[0], dtype=float) # z values normalise to 1\n",
+    "r_norm_nhistRCL = fugi.normalise_with_err(nhistRCL[0],err=0) # z values normalise to 1\n",
     "phi_nhistRCL = nhistRCL[1] # phi\n",
     "costheta_nhistRCL = nhistRCL[2]# cos(theta)\n",
     "\n",
     "nhistRCR = histRCR.to_numpy()\n",
-    "r_nhistRCR = np.array(nhistRCR[0]) # z values normalise to 1\n",
-    "r_norm_nhistRCR = fugi.normalise_matrix(nhistRCR[0]) # z values normalise to 1\n",
+    "r_nhistRCR = np.array(nhistRCR[0], dtype=float) # z values normalise to 1\n",
+    "r_norm_nhistRCR = fugi.normalise_with_err(nhistRCR[0],err=0) # z values normalise to 1\n",
     "\n",
     "totR = np.add(r_nhistRCL,r_nhistRCR)\n",
     "totR_norm = np.add(r_norm_nhistRCL,r_norm_nhistRCR)\n",
@@ -148,15 +148,15 @@
     "if fileSCL and fileSCR is not None:\n",
     "\n",
     "    nhistSCR = histSCR.to_numpy()\n",
-    "    r_nhistSCR = np.array(nhistSCR[0]) # z values normalise to 1\n",
-    "    r_norm_nhistSCR = fugi.normalise_matrix(nhistSCR[0]) # z values normalise to 1\n",
+    "    r_nhistSCR = np.array(nhistSCR[0], dtype=float) # z values normalise to 1\n",
+    "    r_norm_nhistSCR = fugi.normalise_with_err(nhistSCR[0],err=0) # z values normalise to 1\n",
     "\n",
     "    r_nhistSCR_flip=np.flip(r_nhistSCR, axis=1)\n",
     "    r_norm_nhistSCR_flip=np.flip(r_norm_nhistSCR, axis=1)\n",
     "\n",
     "    nhistSCL = histSCL.to_numpy()\n",
-    "    r_nhistSCL = np.array(nhistSCL[0]) # z values normalise to 1\n",
-    "    r_norm_nhistSCL = fugi.normalise_matrix(nhistSCL[0]) # z values normalise to 1\n",
+    "    r_nhistSCL = np.array(nhistSCL[0], dtype=float) # z values normalise to 1\n",
+    "    r_norm_nhistSCL = fugi.normalise_with_err(nhistSCL[0],err=0) # z values normalise to 1\n",
     "    \n",
     "    r_nhistSCL_flip=np.flip(r_nhistSCL, axis=1)\n",
     "    r_norm_nhistSCL_flip=np.flip(r_norm_nhistSCL, axis=1)\n",
@@ -214,24 +214,28 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "    aspect=(phiM.max()/cosM.max())\n",
-    "    cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
+    "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
+    "    cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    \n",
     "    ax1.set_title(\"MFPAD SCL \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
     "    ax1.set_ylabel('cos(theta) [adm]')\n",
     "    ax1.set_aspect(aspect)\n",
     "    cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
-    "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar1.set_ticks([r_norm_nhistSCL.min(),r_norm_nhistSCL.max()])\n",
+    "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "    \n",
     "    \n",
     "    cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL_flip.T,cmap=cmap_temp,levels=15)\n",
+    "    # cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL_flip.T,shading='gouraud', cmap=cmap_temp)\n",
+    "\n",
     "    ax2.set_title(\"MFPAD SCL_flip \"+CH+\"_\"+en)\n",
     "    ax2.set_xlabel('phi [DEG]')\n",
     "    ax2.set_ylabel('cos(theta) [adm]')\n",
     "    ax2.set_aspect(aspect)\n",
-    "    cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "    cbar2=fig.colorbar(cs2, shrink=0.9, ax=ax2)\n",
     "    cbar2.set_ticks([r_norm_nhistSCL_flip.min(),r_norm_nhistSCL_flip.max()])\n",
+    "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "    \n",
     "    plt.show()"
@@ -246,27 +250,30 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "    aspect=(phiM.max()/cosM.max())\n",
-    "    cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
+    "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
+    "    cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "\n",
     "    ax1.set_title(\"MFPAD SCR n0 \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
     "    ax1.set_ylabel('cos(theta) [adm]')\n",
     "    ax1.set_aspect(aspect)\n",
-    "    cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
-    "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "    cbar1=fig.colorbar(cs1, shrink=0.9, ax=ax1)\n",
     "    cbar1.set_ticks([r_norm_nhistSCR.min(),r_norm_nhistSCR.max()])\n",
+    "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
+    "    # cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL.T,cmap=cmap_temp,levels=15)\n",
+    "    cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
     "\n",
-    "    cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL.T,cmap=cmap_temp,levels=15)\n",
     "    ax2.set_title(\"MFPAD SCL n0 \"+CH+\"_\"+en)\n",
     "    ax2.set_xlabel('phi [DEG]')\n",
     "    ax2.set_ylabel('cos(theta) [adm]')\n",
     "    ax2.set_aspect(aspect)\n",
-    "    cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "    cbar2=fig.colorbar(cs2, shrink=0.9, ax=ax2)\n",
     "    cbar2.set_ticks([r_norm_nhistSCL.min(),r_norm_nhistSCL.max()])\n",
+    "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
     "    plt.show()"
    ]
   },
@@ -278,27 +285,31 @@
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "aspect=(phiM.max()/cosM.max())\n",
-    "cs1=ax1.contourf(phiM,cosM,r_norm_nhistRCR.T, cmap=cmap_temp, levels=15)\n",
+    "\n",
+    "# cs1=ax1.contourf(phiM,cosM,r_norm_nhistRCR.T, cmap=cmap_temp, levels=15)\n",
+    "cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistRCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "\n",
     "ax1.set_title(\"MFPAD RCR n0 \"+CH+\"_\"+en)\n",
     "ax1.set_xlabel('phi [DEG]')\n",
     "ax1.set_ylabel('cos(theta) [adm]')\n",
     "ax1.set_aspect(aspect)\n",
-    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
-    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1=fig.colorbar(cs1, shrink=0.9, ax=ax1)\n",
     "cbar1.set_ticks([r_norm_nhistRCR.min(),r_norm_nhistRCR.max()])\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
+    "# cs2=ax2.contourf(phiM,cosM,r_norm_nhistRCL.T,cmap=cmap_temp,levels=15)\n",
+    "cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistRCL.T,shading='gouraud', cmap=cmap_temp)\n",
     "\n",
-    "cs2=ax2.contourf(phiM,cosM,r_norm_nhistRCL.T,cmap=cmap_temp,levels=15)\n",
     "ax2.set_title(\"MFPAD RCL n0 \"+CH+\"_\"+en)\n",
     "ax2.set_xlabel('phi [DEG]')\n",
     "ax2.set_ylabel('cos(theta) [adm]')\n",
     "ax2.set_aspect(aspect)\n",
-    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar2=fig.colorbar(cs2, shrink=0.9, ax=ax2)\n",
     "cbar2.set_ticks([r_norm_nhistRCL.min(),r_norm_nhistRCL.max()])\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -318,19 +329,20 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=20)\n",
+    "# cs=ax.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=20)\n",
+    "cs=ax.pcolormesh(phiM,cosM,totMFPAD.T,shading='gouraud', cmap=cmap_temp)\n",
     "ax.set_title(\"MFPAD tot \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -340,19 +352,20 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
+    "# cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
+    "cs=ax.pcolormesh(phiM,cosM,mPECD_norm.T*100,shading='gouraud', vmin=-8.5, vmax=8.5, cmap=cmap_temp)\n",
     "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "# cbar.set_ticks([mPECD_norm.min(),mPECD_norm.max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel(\"% of assymetry\")\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -365,9 +378,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
